Add link anchor and update scroll position
[#OSF-7473]

- Link anchor in title of each section
- Scroll to the proper ID when link is accessed from outside
- Change links in sidebar to be IDs and not modified paths

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -65,6 +65,14 @@
                         // });
 
                     }
+                    // Scroll to the anchor specified in the URL
+                    $(document).ready(function() {
+                        setTimeout(function() {
+                            if (window.location.hash) {
+                                $(document).scrollTop($(window.location.hash).offset().top);
+                            }
+                        }, 700);
+                    });
 
                     $('pre code').each(function (i, e) {
                         hljs.highlightBlock(e)
